[project]
name = "vibeVAServer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audiocloneserver",
    "audiomessages",
    "vibevoice",
    "torch>=2.0.0",
    "torchaudio",
    "transformers",
    "accelerate",
]

[tool.uv.sources]
audiomessages = { path = "../packages/audiomessages", editable = true }
audiocloneserver = { path = "../packages/audiocloneserver", editable = true }
vibevoice = { git = "git+https://github.com/vibevoice-community/VibeVoice.git"  }
