[project]
name = "vibeVAServer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audiocloneserver",
    "audiomessages",
    "vibevoice",
    "torch>=2.0.0",
    "torchaudio",
    "transformers",
    "accelerate",
    "debugpy>=1.8.19",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
]

[tool.uv.sources]
audiomessages = { path = "../packages/audiomessages", editable = true }
audiocloneserver = { path = "../packages/audiocloneserver", editable = true }
vibevoice = { git = "git+https://github.com/vibevoice-community/VibeVoice.git"  }
